--- a/style.css
+++ b/style.css
@@ -893,6 +893,22 @@ footer {
 /* Small devices (landscape phones) */
 @media (min-width: 576px) and (max-width: 767px) {
   /* Adjust styles for sm screens */
+  .mobile-nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #23a6f0;
+    color: #fff;
+    padding: 10px 20px;
+  }
+  /* subscribe-text */
+  .nav-items-links {
+    display: none;
+  }
+
+  .nav-login-links {
+    display: none;
+  }
   .newsletter-subscribe-btn {
     width: 30%;
     height: 50px;
@@ -1107,11 +1123,47 @@ footer {
     width: 100%;
     background-color: #fff;
   }
-}
+  .nav-login-links {
+    display: flex;
+    align-items: center;
+    width: 40%;
+  }
 
+  nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 2% 3%;
+  }
+  .nav-items {
+    font-size: 400;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
 /* Large devices (desktops) */
 @media (min-width: 992px) and (max-width: 1199px) {
   /* Adjust styles for lg screens */
+  .nav-login-links {
+    display: flex;
+    align-items: center;
+    width: 30%;
+  }
+  nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 2% 4%;
+  }
+
+  .hero-items {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 /* Extra Large devices (large desktops) */
