--- a/style.css
+++ b/style.css
@@ -888,6 +888,10 @@ footer {
   .Learn-more-btn {
     width: 80%;
   }
+  nav h1 {
+    font-size: 1.7rem;
+    font-weight: 800;
+  }
 }
 
 /* Small devices (landscape phones) */
@@ -1077,6 +1081,8 @@ footer {
   }
   nav h1 {
     font-size: 1.7rem;
+    font-weight: 800;
+  }
 }
 
 /* Medium devices (tablets) */
